# BaBee

./: .gitignore  pyproject.toml  readme.md  requirements.txt
UAV/: agilicious.py
UAV/agilicious/: agilicious.urdf  agilicious.yaml
env/: base_env.py
models/attacker/: hp-tuning.py  train.py
models/attacker/env/: hover_env.py
models/attacker/evaluation/: evaluate.py  evaluators.py
models/attacker/learning/: rollout_collection.py
models/defender/: hp-tuning.py  train.py
models/defender/env/: hover_env.py
models/defender/evaluation/: evaluate.py  evaluators.py
models/defender/learning/: rollout_collection.py
models/nominal/: HP_SELECT_TRAIN.py  hp-tuning.py  train.py
models/nominal/env/: hover_env.py
models/nominal/evaluation/: evaluate.py  evaluators.py
utils/: callbacks.py  graph_plotting.py  logging.py  paper_evaluation.py
